# micrograd-cpp

./: CMakeLists.txt  CMakePresets.json  README.md  flake.nix
include/: MLP.hpp  layer.hpp  neuron.hpp  value.hpp
src/: MLP.cpp  layer.cpp  main.cpp  neuron.cpp
